--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -6,9 +6,12 @@ on:
   pull_request:
     branches:
       - main
+permissions:
+  contents: read
 jobs:
   test:
     uses: ./.github/workflows/test.yaml
     permissions:
+      contents: read
       security-events: write
       id-token: write
