--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      security-events: write
     steps:
 
     - name: Setup Go
