--- a/.github/workflows/list.yaml
+++ b/.github/workflows/list.yaml
@@ -24,6 +24,8 @@ jobs:
 
     - uses: sergeysova/jq-action@v2
     - name: Execute Search
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |-
         curl -sS "${{ env.IMG_URL }}" | jq -r '.summaries[].name' | while read img; do
           echo "image: $img"
