--- a/.github/workflows/list.yaml
+++ b/.github/workflows/list.yaml
@@ -17,6 +17,9 @@ jobs:
       actions: write
     steps:
 
+    - name: Checkout Code
+      uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b  # v3.2.0
+
     - name: Parse URL
       run: |-
         url="https://hub.docker.com/api/content/v1/products/search?page=1&page_size=${{ env.image_count }}&q=%2B&source=community&type=image%2Cbundle"
