--- a/.github/workflows/list.yaml
+++ b/.github/workflows/list.yaml
@@ -5,9 +5,11 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    - cron: '0 */5 * * *'
 
 env:
-  image_count: 3
+  image_count: 20
 
 jobs:
   list:
