--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -18,6 +18,9 @@ jobs:
       id-token: write
     steps:
 
+    - name: Checkout Code
+      uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b  # v3.2.0
+
     - name: Install Syft
       uses: anchore/sbom-action/download-syft@07978da4bdb4faa726e52dfc6b1bed63d4b56479  # v0.13.3
 
