fix images loop

--- a/.github/workflows/src-list.yaml
+++ b/.github/workflows/src-list.yaml
@@ -26,8 +26,7 @@ jobs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |-
-        for img in ./images
-        do
+        while read img; do
           echo "image: $img"
           gh workflow run .github/workflows/process.yaml -f image="$img"
-        done
+        done < ./images
