--- a/.github/workflows/src-dockerhub.yaml
+++ b/.github/workflows/src-dockerhub.yaml
@@ -5,8 +5,8 @@ on:
   pull_request:
     branches:
       - main
-  # schedule:
-  #  - cron: '0 */8 * * *'
+  schedule:
+   - cron: '0 */8 * * *'
 
 env:
   image_count: 20
